--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,59 @@
+absl-py==0.15.0
+astunparse==1.6.3
 boto3==1.18.57
 botocore==1.21.57
 cachetools==4.2.4
 certifi==2021.5.30
 charset-normalizer==2.0.6
+clang==5.0
+flatbuffers==1.12
+gast==0.4.0
 google-api-core==2.1.0
 google-auth==2.2.1
+google-auth-oauthlib==0.4.6
 google-cloud-speech==2.9.3
+google-pasta==0.2.0
 googleapis-common-protos==1.53.0
 grpcio==1.41.0
+h5py==3.1.0
 idna==3.2
 jmespath==0.10.0
+keras==2.6.0
+Keras-Preprocessing==1.1.2
 libcst==0.3.21
+Markdown==3.3.4
 mypy-extensions==0.4.3
+numexpr==2.7.3
+numpy==1.21.2
+oauthlib==3.1.1
+opt-einsum==3.3.0
 packaging==21.0
+pandas==1.3.3
 proto-plus==1.19.2
 protobuf==3.18.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
 python-dateutil==2.8.2
+python-speech-features==0.6
+pytz==2021.3
 PyYAML==5.4.1
 requests==2.26.0
+requests-oauthlib==1.3.0
 rsa==4.7.2
 s3transfer==0.5.0
-six==1.16.0
-typing-extensions==3.10.0.2
+scipy==1.7.1
+six==1.15.0
+tables==3.6.1
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.6.0
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
+typing-extensions==3.7.4.3
 typing-inspect==0.7.1
 urllib3==1.26.7
+voxseg==0.1.0
+Werkzeug==2.0.2
+wrapt==1.12.1
