--- a/.gitignore
+++ b/.gitignore
@@ -2405,3 +2405,22 @@
 .vscode/settings.json
 transcript.csv
 trans
+output/face_video_frames_emotions.txt
+output/face_video_frames/frame0.jpg
+output/face_video_frames/frame1.jpg
+output/face_video_frames/frame2.jpg
+output/face_video_frames/frame3.jpg
+output/face_video_frames/frame4.jpg
+output/face_video_frames/frame5.jpg
+output/face_video_frames/frame6.jpg
+output/face_video_frames/frame7.jpg
+output/face_video_framesemotions.csv
+output/face_video_framesemotions.txt
+output/face_video_frames/frame0.jpg
+output/face_video_frames/frame1.jpg
+output/face_video_frames/frame2.jpg
+output/face_video_frames/frame3.jpg
+output/face_video_frames/frame4.jpg
+output/face_video_frames/frame5.jpg
+output/face_video_frames/frame6.jpg
+output/face_video_frames/frame7.jpg
