added save to csv functionality for aws transcribe

--- a/.gitignore
+++ b/.gitignore
@@ -2424,3 +2424,4 @@ output/face_video_frames/frame4.jpg
 output/face_video_frames/frame5.jpg
 output/face_video_frames/frame6.jpg
 output/face_video_frames/frame7.jpg
+output/trans.csv
