--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,23 @@ certifi==2021.5.30
 charset-normalizer==2.0.6
 clang==5.0
 click==8.0.3
+cycler==0.11.0
 deepface==0.0.68
 filelock==3.3.2
 Flask==2.0.2
 flatbuffers==1.12
+fonttools==4.28.2
 gast==0.4.0
 gdown==4.2.0
 google-api-core==2.1.0
 google-auth==2.2.1
 google-auth-oauthlib==0.4.6
+google-cloud-core==2.2.1
 google-cloud-speech==2.9.3
+google-cloud-storage==1.42.3
+google-crc32c==1.3.0
 google-pasta==0.2.0
+google-resumable-media==2.1.0
 googleapis-common-protos==1.53.0
 grpcio==1.41.0
 h5py==3.1.0
@@ -28,9 +34,11 @@ Jinja2==3.0.2
 jmespath==0.10.0
 keras==2.6.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
 libcst==0.3.21
 Markdown==3.3.4
 MarkupSafe==2.0.1
+matplotlib==3.5.0
 mtcnn==0.1.1
 mypy-extensions==0.4.3
 numexpr==2.7.3
@@ -57,6 +65,7 @@ retina-face==0.0.5
 rsa==4.7.2
 s3transfer==0.5.0
 scipy==1.7.1
+setuptools-scm==6.3.2
 six==1.15.0
 soupsieve==2.2.1
 tables==3.6.1
@@ -66,9 +75,11 @@ tensorboard-plugin-wit==1.8.0
 tensorflow==2.6.0
 tensorflow-estimator==2.6.0
 termcolor==1.1.0
+tomli==1.2.2
 tqdm==4.62.3
 typing-extensions==3.7.4.3
 typing-inspect==0.7.1
 urllib3==1.26.7
+voxseg==0.1.0
 Werkzeug==2.0.2
 wrapt==1.12.1
