--- a/.gitignore
+++ b/.gitignore
@@ -2425,3 +2425,4 @@ output/face_video_frames/frame5.jpg
 output/face_video_frames/frame6.jpg
 output/face_video_frames/frame7.jpg
 output/trans.csv
+output/
