--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 absl-py==0.15.0
+arrow==1.2.1
+asgiref==3.4.1
 astunparse==1.6.3
 beautifulsoup4==4.10.0
+binaryornot==0.4.4
 boto3==1.18.57
 botocore==1.21.57
 cachetools==4.2.4
 certifi==2021.5.30
+chardet==4.0.0
 charset-normalizer==2.0.6
 clang==5.0
 click==8.0.3
+cookiecutter==1.7.3
 cycler==0.11.0
 deepface==0.0.68
+Django==3.2.9
+django-tailwind==2.2.2
 filelock==3.3.2
 Flask==2.0.2
 flatbuffers==1.12
@@ -31,6 +38,7 @@ h5py==3.1.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.2
+jinja2-time==0.2.0
 jmespath==0.10.0
 keras==2.6.0
 Keras-Preprocessing==1.1.2
@@ -41,14 +49,17 @@ MarkupSafe==2.0.1
 matplotlib==3.5.0
 mtcnn==0.1.1
 mypy-extensions==0.4.3
+npm==0.1.1
 numexpr==2.7.3
 numpy==1.19.5
 oauthlib==3.1.1
 opencv-python==4.5.4.58
 opt-einsum==3.3.0
+optional-django==0.1.0
 packaging==21.0
 pandas==1.3.3
 Pillow==8.4.0
+poyo==0.5.0
 proto-plus==1.19.2
 protobuf==3.18.1
 pyasn1==0.4.8
@@ -56,6 +67,7 @@ pyasn1-modules==0.2.8
 pyparsing==2.4.7
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-slugify==5.0.2
 python-speech-features==0.6
 pytz==2021.3
 PyYAML==5.4.1
@@ -68,6 +80,7 @@ scipy==1.7.1
 setuptools-scm==6.3.2
 six==1.15.0
 soupsieve==2.2.1
+sqlparse==0.4.2
 tables==3.6.1
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
@@ -75,11 +88,11 @@ tensorboard-plugin-wit==1.8.0
 tensorflow==2.6.0
 tensorflow-estimator==2.6.0
 termcolor==1.1.0
+text-unidecode==1.3
 tomli==1.2.2
 tqdm==4.62.3
 typing-extensions==3.7.4.3
 typing-inspect==0.7.1
 urllib3==1.26.7
-voxseg==0.1.0
 Werkzeug==2.0.2
 wrapt==1.12.1
