--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,100 @@
-apturl==0.5.2
-bcrypt==3.1.7
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
-chardet==3.0.4
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distro==1.4.0
-distro-info===0.23ubuntu1
+absl-py==0.15.0
+arrow==1.2.1
+asgiref==3.4.1
+astunparse==1.6.3
+beautifulsoup4==4.10.0
+binaryornot==0.4.4
+boto3==1.18.57
+botocore==1.21.57
+cachetools==4.2.4
+certifi==2021.5.30
+chardet==4.0.0
+charset-normalizer==2.0.6
+clang==5.0
+click==8.0.3
+cookiecutter==1.7.3
+cycler==0.11.0
+deepface==0.0.68
+Django==3.2.9
 django-cleanup==5.2.0
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-future==0.18.2
-httplib2==0.14.0
-idna==2.8
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-monotonic==1.5
-netifaces==0.10.4
-oauthlib==3.1.0
-olefile==0.46
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==7.0.0
-protobuf==3.6.1
-pycairo==1.16.2
-pycups==1.9.73
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.6
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
-systemd-python==234
-ubuntu-advantage-tools==27.2
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-wadllib==1.3.3
-xkit==0.0.0
+django-tailwind==2.2.2
+filelock==3.3.2
+Flask==2.0.2
+flatbuffers==1.12
+fonttools==4.28.2
+gast==0.4.0
+gdown==4.2.0
+google-api-core==2.1.0
+google-auth==2.2.1
+google-auth-oauthlib==0.4.6
+google-cloud-core==2.2.1
+google-cloud-speech==2.9.3
+google-cloud-storage==1.42.3
+google-crc32c==1.3.0
+google-pasta==0.2.0
+google-resumable-media==2.1.0
+googleapis-common-protos==1.53.0
+grpcio==1.41.0
+h5py==3.1.0
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.2
+jinja2-time==0.2.0
+jmespath==0.10.0
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+libcst==0.3.21
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.5.0
+mtcnn==0.1.1
+mypy-extensions==0.4.3
+npm==0.1.1
+numexpr==2.7.3
+numpy==1.19.5
+oauthlib==3.1.1
+opencv-python==4.5.4.58
+opt-einsum==3.3.0
+optional-django==0.1.0
+packaging==21.0
+pandas==1.3.3
+Pillow==8.4.0
+poyo==0.5.0
+proto-plus==1.19.2
+protobuf==3.18.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-slugify==5.0.2
+python-speech-features==0.6
+pytz==2021.3
+PyYAML==5.4.1
+requests==2.26.0
+requests-oauthlib==1.3.0
+retina-face==0.0.5
+rsa==4.7.2
+s3transfer==0.5.0
+scipy==1.7.1
+setuptools-scm==6.3.2
+six==1.15.0
+soupsieve==2.2.1
+sqlparse==0.4.2
+tables==3.6.1
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.6.0
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
+text-unidecode==1.3
+tomli==1.2.2
+tqdm==4.62.3
+typing-extensions==3.7.4.3
+typing-inspect==0.7.1
+urllib3==1.26.7
+voxseg==0.1.0
+Werkzeug==2.0.2
+wrapt==1.12.1
