renamed appname awstranscription to dataportal

--- a/.gitignore
+++ b/.gitignore
@@ -2565,3 +2565,86 @@ GitHub.sublime-settings
 .vscode/extensions.json 
 .history
 bicyclewebsite/populate_dummy.py
+myvenv/lib64
+myvenv/pyvenv.cfg
+myvenv/bin/activate
+myvenv/bin/activate.csh
+myvenv/bin/activate.fish
+myvenv/bin/Activate.ps1
+myvenv/bin/chardetect
+myvenv/bin/cookiecutter
+myvenv/bin/django-admin
+myvenv/bin/django-admin.py
+myvenv/bin/easy_install
+myvenv/bin/easy_install-3.8
+myvenv/bin/estimator_ckpt_converter
+myvenv/bin/f2py
+myvenv/bin/f2py3
+myvenv/bin/f2py3.8
+myvenv/bin/face-recognition-ensemble-model.txt
+myvenv/bin/fixup_speech_v1_keywords.py
+myvenv/bin/fixup_speech_v1p1beta1_keywords.py
+myvenv/bin/flask
+myvenv/bin/fonttools
+myvenv/bin/gdown
+myvenv/bin/google-oauthlib-tool
+myvenv/bin/import_pb_to_tensorboard
+myvenv/bin/jp.py
+myvenv/bin/markdown_py
+myvenv/bin/normalizer
+myvenv/bin/pip
+myvenv/bin/pip3
+myvenv/bin/pip3.8
+myvenv/bin/pt2to3
+myvenv/bin/ptdump
+myvenv/bin/ptrepack
+myvenv/bin/pttree
+myvenv/bin/pyftmerge
+myvenv/bin/pyftsubset
+myvenv/bin/pyrsa-decrypt
+myvenv/bin/pyrsa-encrypt
+myvenv/bin/pyrsa-keygen
+myvenv/bin/pyrsa-priv2pub
+myvenv/bin/pyrsa-sign
+myvenv/bin/pyrsa-verify
+myvenv/bin/python
+myvenv/bin/python3
+myvenv/bin/saved_model_cli
+myvenv/bin/slugify
+myvenv/bin/sqlformat
+myvenv/bin/tensorboard
+myvenv/bin/tf_upgrade_v2
+myvenv/bin/tflite_convert
+myvenv/bin/toco
+myvenv/bin/toco_from_protos
+myvenv/bin/tqdm
+myvenv/bin/ttx
+myvenv/bin/wheel
+myvenv/share/man/man1/ttx.1
+myvenv/share/python-wheels/appdirs-1.4.3-py2.py3-none-any.whl
+myvenv/share/python-wheels/CacheControl-0.12.6-py2.py3-none-any.whl
+myvenv/share/python-wheels/certifi-2019.11.28-py2.py3-none-any.whl
+myvenv/share/python-wheels/chardet-3.0.4-py2.py3-none-any.whl
+myvenv/share/python-wheels/colorama-0.4.3-py2.py3-none-any.whl
+myvenv/share/python-wheels/contextlib2-0.6.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/distlib-0.3.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/distro-1.4.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/html5lib-1.0.1-py2.py3-none-any.whl
+myvenv/share/python-wheels/idna-2.8-py2.py3-none-any.whl
+myvenv/share/python-wheels/ipaddr-2.2.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/lockfile-0.12.2-py2.py3-none-any.whl
+myvenv/share/python-wheels/msgpack-0.6.2-py2.py3-none-any.whl
+myvenv/share/python-wheels/packaging-20.3-py2.py3-none-any.whl
+myvenv/share/python-wheels/pep517-0.8.2-py2.py3-none-any.whl
+myvenv/share/python-wheels/pip-20.0.2-py2.py3-none-any.whl
+myvenv/share/python-wheels/pkg_resources-0.0.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/progress-1.5-py2.py3-none-any.whl
+myvenv/share/python-wheels/pyparsing-2.4.6-py2.py3-none-any.whl
+myvenv/share/python-wheels/requests-2.22.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/retrying-1.3.3-py2.py3-none-any.whl
+myvenv/share/python-wheels/setuptools-44.0.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/six-1.14.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/toml-0.10.0-py2.py3-none-any.whl
+myvenv/share/python-wheels/urllib3-1.25.8-py2.py3-none-any.whl
+myvenv/share/python-wheels/webencodings-0.5.1-py2.py3-none-any.whl
+myvenv/share/python-wheels/wheel-0.34.2-py2.py3-none-any.whl
