--- a/.gitignore
+++ b/.gitignore
@@ -2648,3 +2648,5 @@ myvenv/share/python-wheels/toml-0.10.0-py2.py3-none-any.whl
 myvenv/share/python-wheels/urllib3-1.25.8-py2.py3-none-any.whl
 myvenv/share/python-wheels/webencodings-0.5.1-py2.py3-none-any.whl
 myvenv/share/python-wheels/wheel-0.34.2-py2.py3-none-any.whl
+data/43minute_test.mp3
+data/03022022104808.MP4
